--- a/src/App.scss
+++ b/src/App.scss
@@ -1,25 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+//.app {
+//  text-align: center;
+//  background: #020024;
+//  background: linear-gradient(90deg, #020024 0%, #daad86 0%, #fbeec1 50%, #daad86 100%);
+//}
