--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,7 @@
 .footer {
-  height: 70px;
+  flex: 0 0 auto;
+  //height: 70px;
+  //margin-top: -70px;
   padding: 5px 25px;
   background-color: #659dbd;
   display: flex;
@@ -7,7 +9,6 @@
   justify-content: space-between;
 
   a {
-    text-decoration: none;
     display: flex;
     align-items: center;
     color: #000;
