--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,11 +6,25 @@
   font-size: 25px;
   display: flex;
   align-items: center;
-}
+  justify-content: space-between;
 
-.logo {
-  height: 50px;
-  pointer-events: none;
+  .logo {
+    height: 50px;
+    pointer-events: none;
+  }
+
+  //.navigation {
+  //  text-transform: uppercase;
+  //  max-width: 180px;
+  //  width: 100%;
+  //  display: flex;
+  //  justify-content: space-between;
+
+  a {
+    text-decoration: none;
+    font-weight: 700;
+  }
+  //}
 }
 
 @media (prefers-reduced-motion: no-preference) {
