--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,36 +8,20 @@
   align-items: center;
   justify-content: space-between;
 
+  h1 {
+    text-transform: uppercase;
+    font-size: 4.5vw;
+    color: #08537e;
+    text-shadow: 1px -1px 0px #02284e;
+  }
+
   .logo {
     height: 50px;
     pointer-events: none;
   }
 
-  //.navigation {
-  //  text-transform: uppercase;
-  //  max-width: 180px;
-  //  width: 100%;
-  //  display: flex;
-  //  justify-content: space-between;
-
   a {
     text-decoration: none;
     font-weight: 700;
-  }
-  //}
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .logo {
-    animation: logo-rotation infinite 5s linear;
-  }
-}
-
-@keyframes logo-rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
