feat: added components meanings and nested list

--- a/src/pages/Result/Result.module.scss
+++ b/src/pages/Result/Result.module.scss
@@ -32,6 +32,10 @@
     margin-bottom: 3px;
   }
 
+  //h6 {
+  //  margin-bottom: 6px;
+  //}
+
   a {
     font-size: 12px;
   }
@@ -45,8 +49,6 @@
     flex-direction: column;
     margin-bottom: 10px;
 
-    li {
-      display: inline-block;
-    }
+    list-style: none;
   }
 }
