--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,6 @@ main {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  background: #020024;
-  background: linear-gradient(90deg, #020024 0%, #daad86 0%, #fbeec1 50%, #daad86 100%);
+  //background: #020024;s
+  //background: linear-gradient(90deg, #020024 0%, #daad86 0%, #fbeec1 50%, #daad86 100%);
 }
