--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,9 +1,8 @@
 .footer {
   flex: 0 0 auto;
-  //height: 70px;
-  //margin-top: -70px;
-  padding: 5px 25px;
-  background-color: #659dbd;
+  width: 100%;
+  height: 80px;
+  padding: 25px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -11,11 +10,18 @@
   a {
     display: flex;
     align-items: center;
-    color: #000;
+    color: #6d7175;
   }
-}
 
-.logo {
-  height: 50px;
-  margin-right: 10px;
+  .logo {
+    height: 32px;
+    margin-right: 10px;
+  }
+
+  p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #6d7175;
+  }
 }
