--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,27 +1,34 @@
 .header {
-  height: 70px;
-  padding: 0 25px;
-  background-color: #659dbd;
-  font-weight: 700;
-  font-size: 25px;
+  width: 100%;
+  height: 80px;
+  padding: 25px 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 
-  h1 {
-    text-transform: uppercase;
-    font-size: 4.5vw;
-    color: #08537e;
-    text-shadow: 1px -1px 0px #02284e;
-  }
-
   .logo {
-    height: 50px;
+    height: 40px;
     pointer-events: none;
   }
 
   a {
     text-decoration: none;
     font-weight: 700;
+    color: #0070f3;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+  }
+
+  .btn {
+    color: #000;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    transition: 0.3s;
+
+    &:hover {
+      color: #0070f3;
+    }
   }
 }
