--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,46 @@
 .search {
-  display: flex;
-  align-items: flex-end;
-  padding: 0 20px;
-  margin-bottom: 50px;
+  max-width: 592px;
+  width: 100%;
+  height: 56px;
+  position: relative;
+
+  input[type='text'] {
+    height: 100%;
+    width: 100%;
+    border: 1px solid #e4e5e7;
+    border-radius: 28px;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 0 40px;
+    font-weight: 700;
+
+    &::placeholder {
+      font-weight: 400;
+    }
+
+    &:focus,
+    &:hover,
+    &:active {
+      outline: none !important;
+      border: 2px solid #0070f3;
+    }
+  }
+
+  .searchIcon {
+    position: absolute;
+    top: 20px;
+    left: 16px;
+  }
+
+  .closeIcon {
+    position: absolute;
+    top: 23px;
+    right: 20px;
+    cursor: pointer;
+    visibility: hidden;
+
+    &.active {
+      visibility: visible;
+    }
+  }
 }
