--- a/src/index.scss
+++ b/src/index.scss
@@ -16,19 +16,18 @@ body {
 
 a {
   text-decoration: none;
-  color: #02284e;
 }
 
 main {
+  max-width: 1920px;
+  width: 100%;
   flex: 1 1 auto;
-  margin-top: 25px;
   padding: 0 25px;
+  background: #f6f6f7;
 }
 
 #root {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  //background: #020024;s
-  //background: linear-gradient(90deg, #020024 0%, #daad86 0%, #fbeec1 50%, #daad86 100%);
 }
