--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -2,4 +2,12 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
+
+  h1 {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 64px;
+    margin-bottom: 48px;
+  }
 }
