--- a/src/pages/Result/Result.module.scss
+++ b/src/pages/Result/Result.module.scss
@@ -40,15 +40,15 @@
     font-size: 12px;
   }
 
-  p {
-    font-size: 12px;
-  }
+  //p {
+  //  font-size: 12px;
+  //}
 
-  ul {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
+  //ul {
+  //  display: flex;
+  //  flex-direction: column;
+  //  margin-bottom: 10px;
 
-    list-style: none;
-  }
+  //  list-style: none;
+  //}
 }
