--- a/src/components/CollapseList/CollapseList.module.scss
+++ b/src/components/CollapseList/CollapseList.module.scss
@@ -1,15 +1,20 @@
+@import '../../styles/variables.scss';
+
 .collapse {
   max-width: 800px;
   width: 100%;
   margin-bottom: 10px;
 }
 
+h3 {
+  margin-bottom: 0;
+}
+
 .titleContainer {
   max-width: 800px;
   width: 100%;
-  display: flex;
+  @include dfc;
   justify-content: space-between;
-  align-items: center;
   padding: 16px 24px;
   height: 58px;
   background: #e4e5e7;
@@ -23,12 +28,12 @@
   }
 
   &:hover {
-    background: #0070f3;
+    background: $color-blue;
     color: #fff;
   }
 
   &.active {
-    background: #0070f3;
+    background: $color-blue;
     color: #fff;
   }
 }
