--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,27 +1,29 @@
+@import '../../styles/variables.scss';
+
 .footer {
+  @include dfc;
   flex: 0 0 auto;
   width: 100%;
   height: 80px;
   padding: 25px;
-  display: flex;
-  align-items: center;
   justify-content: space-between;
 
   a {
     display: flex;
     align-items: center;
-    color: #6d7175;
+    color: $color-grey;
   }
 
   .logo {
     height: 32px;
     margin-right: 10px;
+    transition: 0.3s;
   }
 
   p {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #6d7175;
+    color: $color-grey;
   }
 }
