--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,10 @@
+@import '../../styles/variables.scss';
+
 .header {
   width: 100%;
   height: 80px;
   padding: 25px 40px;
-  display: flex;
-  align-items: center;
+  @include dfc;
   justify-content: space-between;
 
   .logo {
@@ -14,9 +15,8 @@
   a {
     text-decoration: none;
     font-weight: 700;
-    color: #0070f3;
-    display: flex;
-    align-items: center;
+    color: $color-blue;
+    @include dfc;
     font-size: 16px;
   }
 
@@ -28,7 +28,7 @@
     transition: 0.3s;
 
     &:hover {
-      color: #0070f3;
+      color: $color-blue;
     }
   }
 }
