--- a/src/components/License/License.module.scss
+++ b/src/components/License/License.module.scss
@@ -1,4 +1,14 @@
+@import '../../styles/variables.scss';
+
+.licenseContainer {
+  margin-bottom: 32px;
+}
+
+h3 {
+  margin-bottom: 12px;
+}
+
 .licenseLink {
   display: inline-block;
-  margin-bottom: 10px;
+  color: $color-grey;
 }
