--- a/src/components/Phonetics/Phonetics.module.scss
+++ b/src/components/Phonetics/Phonetics.module.scss
@@ -1,5 +1,25 @@
-.phonetics {
-  display: flex;
-  width: 100%;
-  align-items: center;
+@import '../../styles/variables.scss';
+
+.phoeneticContainer {
+  margin-bottom: 32px;
+
+  h3 {
+    margin-bottom: 12px;
+  }
+
+  .phonetics {
+    @include dfc;
+    width: 100%;
+    font-size: 20px;
+    line-height: 28px;
+    color: $color-grey;
+
+    p {
+      margin-right: 8px;
+    }
+  }
+
+  li {
+    list-style: none;
+  }
 }
