--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import './styles/variables.scss';
 
 * {
   margin: 0;
@@ -19,15 +20,14 @@ a {
 }
 
 main {
-  max-width: 1920px;
+  //max-width: 1920px;
   width: 100%;
   flex: 1 1 auto;
   padding: 0 25px;
-  background: #f6f6f7;
+  background: $color-background;
 }
 
 #root {
   min-height: 100%;
-  display: flex;
-  flex-direction: column;
+  @include fdc;
 }
