--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,13 +1,21 @@
+@import '../../styles/variables.scss';
+
 .home {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  @include fdc-center-center;
 
   h1 {
     font-weight: 700;
     font-size: 56px;
     line-height: 64px;
     margin-bottom: 48px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 560px) {
+  .home {
+    h1 {
+      font-size: 30px;
+    }
   }
 }
