--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,22 +1,45 @@
-.notFound {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+@import '../../styles/variables.scss';
 
-  h1 {
-    font-size: 50px;
-    font-weight: 900;
-    color: #daad86;
-    text-transform: uppercase;
-    text-shadow: 2px -1px 0px #02284e;
-    letter-spacing: 0px;
-    margin-bottom: 20px;
+.notFound {
+  @include fdc-center-center;
+
+  h3 {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 64px;
+    text-align: center;
   }
 
-  a {
-    text-decoration: underline;
-    color: #02284e;
-    font-weight: 700;
+  h4 {
+    color: $color-blue;
+  }
+
+  .imgContainer {
+    height: auto;
+    max-width: 800px;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.link {
+  color: #000;
+  font-weight: 700;
+  transition: 0.3s;
+
+  &:hover {
+    color: $color-blue;
+  }
+}
+
+@media (max-width: 560px) {
+  .notFound {
+    h3 {
+      font-size: 30px;
+      line-height: 40px;
+    }
   }
 }
