feat: added sticky header and styles for scrollbar

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,15 @@
 @import '../../styles/variables.scss';
 
 .header {
+  position: sticky;
+  top: 0;
   width: 100%;
   height: 80px;
   padding: 25px 40px;
   @include dfc;
   justify-content: space-between;
+  z-index: 100;
+  background: #fff;
 
   .logo {
     height: 40px;
