--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ body {
   height: 100%;
   font-family: 'Poppins', sans-serif;
   line-height: 1;
+  overflow-x: auto;
 }
 
 a {
@@ -30,4 +31,23 @@ main {
 #root {
   min-height: 100%;
   @include fdc;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px grey;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $color-background;
+  border: 1px solid $color-blue;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $color-blue;
 }
