feat: finish project (refactor styles/ added new components)

--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -5,7 +5,7 @@
   border: 10px solid #000;
   border-radius: 50%;
   border-top: 10px solid #ccc;
-  border-right: 10px solid $color-blue;
+  border-right: 10px solid $blue;
   border-bottom: 10px solid #2f5870;
   width: 100px;
   height: 100px;
