--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,29 +1,51 @@
 // Colors
-$color-blue: #0070f3;
-$color-grey: #6d7175;
-$color-background: #f6f6f7;
+$blue: #0070f3;
+$grey: #6d7175;
+$light-grey: #f6f6f7;
+$red: #f44336;
 
 //mixin
 @mixin df {
   display: flex;
 }
 
-@mixin dfc {
+@mixin df-align-center {
   @include df;
   align-items: center;
 }
 
-@mixin fdc {
+@mixin flex-column {
   @include df;
   flex-direction: column;
 }
 
-@mixin fdc-center {
-  @include dfc;
+@mixin flex-column-center {
+  @include df-align-center;
   flex-direction: column;
 }
 
-@mixin fdc-center-center {
-  @include fdc-center;
+@mixin flex-column-center-center {
+  @include flex-column-center;
   justify-content: center;
+}
+
+@mixin textH1 {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 64px;
+}
+
+@mixin text16 {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+@mixin text20 {
+  font-size: 20px;
+  line-height: 28px;
+}
+
+@mixin text36 {
+  font-size: 36px;
+  line-height: 42px;
 }
