--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,9 @@
 @import '../../styles/variables.scss';
 
 .footer {
-  @include dfc;
+  @include df-align-center;
+  max-width: 1920px;
+  width: 100%;
   flex: 0 0 auto;
   width: 100%;
   height: 80px;
@@ -11,7 +13,7 @@
   a {
     display: flex;
     align-items: center;
-    color: $color-grey;
+    color: $grey;
   }
 
   .logo {
@@ -21,9 +23,7 @@
   }
 
   p {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: $color-grey;
+    @include text16;
+    color: $grey;
   }
 }
