--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,15 +1,26 @@
 @import '../../styles/variables.scss';
 
 .header {
+  @include flex-column-center-center;
   position: sticky;
   top: 0;
   width: 100%;
   height: 80px;
-  padding: 25px 40px;
-  @include dfc;
-  justify-content: space-between;
+  padding: 0 40px;
   z-index: 100;
   background: #fff;
+  top: -40px;
+  justify-content: center;
+
+  .container {
+    position: sticky;
+    height: 40px;
+    max-width: 1920px;
+    width: 100%;
+    @include df-align-center;
+    justify-content: space-between;
+    top: 0;
+  }
 
   .logo {
     height: 40px;
@@ -19,20 +30,19 @@
   a {
     text-decoration: none;
     font-weight: 700;
-    color: $color-blue;
-    @include dfc;
-    font-size: 16px;
+    color: $blue;
+    @include df-align-center;
+    @include text16;
   }
 
-  .btn {
+  .button {
+    @include text16;
     color: #000;
     font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
     transition: 0.3s;
 
     &:hover {
-      color: $color-blue;
+      color: $blue;
     }
   }
 }
