--- a/src/components/NestedList/NestedList.module.scss
+++ b/src/components/NestedList/NestedList.module.scss
@@ -6,14 +6,10 @@
   margin-bottom: 10px;
 }
 
-h3 {
-  margin-bottom: 0;
-}
-
 .titleContainer {
+  @include df-align-center;
   max-width: 800px;
   width: 100%;
-  @include dfc;
   justify-content: space-between;
   padding: 16px 24px;
   height: 58px;
@@ -21,33 +17,33 @@ h3 {
   border-radius: 4px;
   cursor: pointer;
   transition: 0.3s;
-  margin-bottom: 10px;
 
   span {
-    font-size: 30px;
+    @include text36;
   }
 
   &:hover {
-    background: $color-blue;
+    background: $blue;
     color: #fff;
   }
 
   &.active {
-    background: $color-blue;
+    background: $blue;
     color: #fff;
   }
 }
 
-title {
+.title {
   font-style: 20px;
 }
 
 .content {
-  font-size: 16px;
-  line-height: 24px;
+  @include text16;
+  background: #e4e5e7;
   max-height: 0;
   overflow: hidden;
   transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+  padding: 0 30px;
 
   &.show {
     height: auto;
