--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -7,14 +7,14 @@
   position: relative;
 
   input[type='text'] {
+    @include text16;
     height: 100%;
     width: 100%;
-    border: 1px solid #e4e5e7;
+    border: 2px solid #e4e5e7;
     border-radius: 28px;
-    font-size: 16px;
-    line-height: 24px;
     padding: 0 40px;
     font-weight: 700;
+    transition: 0.5s;
 
     &::placeholder {
       font-weight: 400;
@@ -24,7 +24,7 @@
     &:hover,
     &:active {
       outline: none !important;
-      border: 2px solid $color-blue;
+      border: 2px solid $blue;
     }
   }
 
