--- a/src/index.scss
+++ b/src/index.scss
@@ -21,16 +21,15 @@ a {
 }
 
 main {
-  //max-width: 1920px;
   width: 100%;
   flex: 1 1 auto;
   padding: 0 25px;
-  background: $color-background;
+  background: $light-grey;
 }
 
 #root {
   min-height: 100%;
-  @include fdc;
+  @include flex-column-center;
 }
 
 ::-webkit-scrollbar {
@@ -43,11 +42,17 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: $color-background;
-  border: 1px solid $color-blue;
+  background: $light-grey;
+  border: 1px solid $blue;
   border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: $color-blue;
+  background: $blue;
+}
+
+@media (max-width: 560px) {
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
 }
