--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,17 +1,15 @@
 @import '../../styles/variables.scss';
 
 .notFound {
-  @include fdc-center-center;
+  @include flex-column-center-center;
 
   h3 {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 64px;
+    @include textH1;
     text-align: center;
   }
 
   h4 {
-    color: $color-blue;
+    color: $blue;
   }
 
   .imgContainer {
@@ -31,15 +29,14 @@
   transition: 0.3s;
 
   &:hover {
-    color: $color-blue;
+    color: $blue;
   }
 }
 
 @media (max-width: 560px) {
   .notFound {
     h3 {
-      font-size: 30px;
-      line-height: 40px;
+      @include text36;
     }
   }
 }
