--- a/src/pages/Result/Result.module.scss
+++ b/src/pages/Result/Result.module.scss
@@ -1,41 +1,36 @@
 @import '../../styles/variables.scss';
 
 .result {
-  @include fdc-center;
+  @include flex-column-center-center;
   padding-top: 60px;
 
   .wordBase {
-    @include dfc;
+    @include df-align-center;
     flex-wrap: wrap;
     width: 100%;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     margin-bottom: 32px;
     border-bottom: 1px solid #e4e5e7;
   }
 
   .helper {
-    @include fdc;
+    @include flex-column;
     max-width: 1200px;
     width: 100%;
 
     h2 {
+      @include text36;
       font-weight: 700;
-      font-size: 36px;
-      line-height: 40px;
-      margin-right: 8px;
+      margin-right: 15px;
     }
 
     .phoenetic {
-      font-size: 20px;
-      line-height: 28px;
-      color: $color-grey;
+      color: $grey;
     }
 
     h3 {
       font-weight: 600;
-      font-size: 20px;
-      line-height: 28px;
-      //margin-bottom: 12px;
+      @include text20;
     }
   }
 }
